apps/wounds-server/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wounds-api-service
spec:
  selector:
    app: wounds-api
  ports:
    - port: 80
      targetPort: 8000
