apps/wounds-server/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wounds-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: server-wounds.ak8s.ic.unicamp.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wounds-api-service
                port:
                  number: 80
